added a second index page to test Emmet

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <!-- Wihtout the title filled out, the the tab will show the file name -->
     <title>My First Webpage</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Hello World!</h1>
+  </body>
 </html>
